# sphinx-clarity-theme

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
demo/: .buildinfo  .buildinfo.bak  index.html  objects.inv  searchindex.js
demo/_sources/: changelog.md.txt  index.md.txt  issues.md.txt  license.md.txt
demo/_sources/customize/: favicon.md.txt  fonts.md.txt  headings.md.txt  index.md.txt  language-selection.md.txt  layouts.md.txt
demo/_static/: documentation_options.js  language_data.js
demo/_static/scripts/: scroll-to-top.js  scrollspy.js
demo/_static/styles/: input.css  output.css
demo/changelog/: index.html
demo/customize/: index.html
demo/customize/article-footer/: index.html
demo/customize/colors/: index.html
demo/customize/dark-mode/: index.html
demo/customize/favicon/: index.html
demo/genindex/: index.html
demo/howtos/: index.html
demo/issues/: index.html
demo/license/: index.html
demo/quickstart/: index.html
demo/reference/: index.html
demo/search/: index.html
docs/: changelog.md  conf.py  howtos.md  pyproject.toml  quickstart.md  reference.md
docs/_templates/: layout.html
docs/customize/: article-footer.md  colors.md  dark-mode.md  footer.md  header-logo.md  header-menu.md
src/: __init__.py  base.html  layout.html  theme.toml
src/layouts/: compact.html
src/partials/: README.md  article_nav.html  header.html  logo.html  scroll_to_top.html  sidebar_toggles.html
src/sidebars/: gtoc.html
src/sphinx_clarity_theme/: __init__.py  context.py
tests/: conftest.py  test_context.py  test_e2e.py
(+27 files in other folders)
